--- a/blog.html
+++ b/blog.html
@@ -4,34 +4,37 @@
       <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EXTERMINIO EL ORGINAL</title>
-    <link rel="icon" type="icon"  href="icon/logo.jpeg.png">
+    <link rel="icon" type="icon" href="icon/IconNoplagas.png">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
       </head>
 
     <body>
-     <header class="site-header">
-     <div class="contenedor contenido-header">
-       <div class="barra">
-         <a href="/index.html">
-          <img src="icon/IconExterminios.png" alt="Logo Exterminio" width="140" height="110">
-         </a>
-      <nav class="navegacion">
-        <a href="nosotros.html">Nosotros</a>
-        <a href="anuncios.html">Anuncios</a>
-        <a href="blog.html">Blog</a>
-        <a href="contacto.html">Contacto</a>
-      </nav>
-     </div>
- </div>
-     </header>
+      <header >
+        <div class="site-header">
+          <div class="contenedor contenido-header">
+            <div class="barra">  
+                <a href="index.html">
+                    <img src="icon/IconExterminios.png" alt="Logo Exterminio" class="logo">
+                </a>
+                <nav class="navegacion">
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="anuncio.html">Anuncio</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contacto.html">Contacto</a>
+                </nav>
+            </div>
+          </div>
+        </div>
+        </header>
      
 
      <main class="contenedor seccion contenido-centrado">
         <h3 class="fw-300 centrar-texto">Blog Exterminios</h3>
         <article class="entrada-blog">
             <div class="imagen size">
-            <img src="icon/BlancoContacto.jpeg" alt="Producto Nosotros" width="260px" height="260">
+            <img src="images/blogim1.jpg" alt="Producto Nosotros" width="260px" height="260">
             </div>
     <div class="texto-entrada righ" >
       <a href="entrada-blog.html">
@@ -44,7 +47,7 @@
     </article>  
     <article class="entrada-blog">"
      <div class="imagen size">
-            <img src="icon/AzulContacto.jpeg" alt="Producto Nosotros" width="260px" height="260">
+            <img src="images/Blog2.jpg" alt="Producto Nosotros" width="260px" height="260">
         </div>
         <div class="texto-entrada righ">
             <a href="entrada-blog2.html">
@@ -57,11 +60,11 @@
         </article> 
  <article class="entrada-blog">
     <div class="imagen size">
-    <img src="images/2.png" alt="Producto Nosotros" width="260px" height="260">
+    <img src="images/Extermnio.jpg" alt="Producto Nosotros" width="260px" height="260">
     </div>
 <div class="texto-entrada righ" >
-<a href="entrada-blog3.html">
-<h4>Control De Plagas</h4>
+<a href="#">
+<h4>Los Mejores Insecticidas y de Mejor Calidad Para tu Hogar</h4>
 </a>
 <p>Escrito el: <em class="span">23/04/2020 </em>por: <em class="span">Admin</em></p>
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.cusotationem 
@@ -72,7 +75,7 @@ qui inventore tenetur deserunt esse quasi odit voluptates iste similique minima?
   
    <footer class="site-footer">
      <div class="contenedor contenedor-footer">
-       <nav class="navegacion"">
+       <nav class="navegacion">
          <a href="nosotros.html">Nosotros</a>
          <a href="anuncios.html">Anuncios</a>
          <a href="blog.html">Blog</a>
