--- a/index.html
+++ b/index.html
@@ -1,193 +1,201 @@
 <!DOCTYPE html>
 <html lang="es"> 
-    <head>
-      <meta charset="utf-8">
+
+  <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EXTERMINIO EL ORGINAL</title>
-    <link rel="icon" type="icon"  href="icon/logo.jpeg.png">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style.css">
-      </head>
 
-    <body>
-     <header class="site-header inicio">
-     <div class="contenedor contenido-header">
-       <div class="barra">
-         <a href="/index.html">
-          <img src="icon/IconExterminios.png" alt="Logo Exterminio" width="140" height="110">
-         </a>
-      <nav class="navegacion">
-        <a href="nosotros.html">Nosotros</a>
-        <a href="anuncios.html">Anuncios</a>
-        <a href="blog.html">Blog</a>
-        <a href="contacto.html">Contacto</a>
-      </nav>
-    </div>
-      <h1 >Venta De Exterminio</h1>
-    </div>
-     </header>
-   <section class="contenedor seccion">
-    <h2 class="fw-300 centrar-texto">Le Ofrecemos</h2>
-    <div class="icono-nosotros">
-      <div class="icon">
-          <img src="icon/Eficinecia.jpeg" alt="Imagen Eficiencia " />
-          <h3 class="mayuscula">EFICIENCIA</h3>
-            <p>Conramos con productos de buena calidad le garantizan una 
-              completa erradicacion de las distinas plagas que puedan 
-              aparecer en su domicilio, si lo desea puede preguntar por el 
-              servicio de fumigacion.</p>
-      </div>
-      <div class="icon">
-          <img src="icon/Economia.jpeg" alt="Imagen Economia">
-          <h3 class="mayuscula">ECONOMIA</h3>
-          <p>Nuestros productos estan fabricados con los quimicos economicos y de calidad,
-            permitiendonos ofrecerlos a un precio economico y asequible para cualquier persona 
-            que busque acabar con las molestas plagas.
-          </p>
-       </div>
-      <div class="icon">
-        <img src="icon/Seguridad.jpeg" alt="Imagen Seguridad"/>
-        <h3 class="mayuscula">SEGURIDAD</h3>
-        <p>Le garantizamos una completa erradicacion de las plagas utilizando cualquiera de 
-          nuestros productos en sus diferentes presentaciones, si realiza su compra por internet
-          nos comprometemos a enviarle su producto a su direccion de residencia.
-        </p>
-      </div>
-    </div>
-  </section>
-  <main class="seccion contenedor">
-    <header>
-    <h2 class="fw-300 centrar-texto">Insecticidas En Venta </h2>
+    <title>Exterminio El Original</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="icon" type="icon"  href="icon/IconNoplagas.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+
+  </head>
+
+  <body>
+    <header class="site-header inicio">
+        <div class="contenedor contenido-header">
+          <div class="barra">
+              <a href="index.html">
+                  <img src="icon/IconExterminios.png" alt="Logo Exterminio" class="logo-exterminio">
+              </a>
+              <nav class="navegacion">
+                  <a href="nosotros.html">Nosotros</a>
+                  <a href="anuncio.html">Anuncio</a>
+                  <a href="blog.html">Blog</a>
+                  <a href="contacto.html">Contacto</a>
+              </nav>
+          </div>
+          <h1 >Venta De Exterminio</h1>
+        </div>
     </header>
-    <div class="contenedor-anuncio">
-    <div class="anuncio">
-      <img src="images/Blanco con Válvula 500 ml.jpg" alt="Imagen Exterminio Lider" > 
-      <div class="contenido-anuncio">
-        <h3>Exterminio Lider</h3>
-        <p>Este Insecticidase utuliza para erradicar comejen, cucarahcas,
-          pulgas, hormigas entre otros.</p>
-        <p class="precio">$ 11.000 COP</p>
-        <ul class="icono-exterminio">
-          <li> <img src="icon/Galon.jpeg" alt=""></li>
-          <li><img src="icon/Litro.jpeg" alt=""></li>
-          <li><img src="icon/Spray.jpeg" alt=""></li>
-       </ul>
-       <ul class="icono-exterminio">
-         <li>Galon</li>
-         <li>2lt</li>
-         <li>Spray</li>
-       </ul>
-             <a href="anuncio.html" class="boton boton-naranja d-block"> Ver Insecticida</a>
-        </div>
-    </div>
-    <div class="anuncio">
-          <img src="images/Azul Con Válvula 500 ml.jpg" alt="Imagen Exterminnio De Zancudos"  >
-                <div class="contenido-anuncio">
-          <h3>Exterminio De Zancudo</h3>
-          <p>Con este insecticida se podran erradicar por completo los zancudos.</p>
-          <p class="precio">$ 12.000 COP</p>
-          <ul class="icono-exterminio">
-            <li> <img src="icon/Galon.jpeg" alt=""></li>
-            <li><img src="icon/Litro.jpeg" alt=""></li>
-            <li><img src="icon/Spray.jpeg" alt=""></li>
-         </ul>
-         <ul class="icono-exterminio">
-           <li>Galon</li>
-           <li>2lt</li>
-           <li>Spray</li>
-         </ul>
-              <a href="anuncio2.html" class=" boton boton-naranja d-block">Ver Insecticida</a>
-       </div>
-    </div>
-    <div class="anuncio">
-        <img src="images/Amarillo Con Válvula 500 ml.jpg" alt="Imagen Exterminio De Moscas" >
-        <div class="contenido-anuncio">
-        <h3>Exterminio De Moscas</h3>
-        <p>Este exterminio te dara satisfaccion ya que si lo usas no tenderas 
-          problemas con esos molestos mosquitos que rodean tu casa. </p>
-        <p class="precio">$ 12.000 COP</p>
-        <ul class="icono-exterminio">
-          <li> <img src="icon/Galon.jpeg" alt=""></li>
-          <li><img src="icon/Litro.jpeg" alt=""></li>
-          <li><img src="icon/Spray.jpeg" alt=""></li>
-       </ul>
-       <ul class="icono-exterminio">
-         <li>Galon</li>
-         <li>2lt</li>
-         <li>Spray</li>
-       </ul>
-          <a href="anuncio3.html" class="boton boton-naranja d-block">Ver Insecticida</a>
-      </div>
-    </div>
-</div>
-    <br>
-    <footer>
-   <div class="ver-insecticida">
-      <a href="anuncios.html" class="boton boton-rojo d-block">Ver Todos Los Insecticidas</a>
-  </div>
-  </footer>
-  </main>
-  <section class="image-hogar">
-   <div class="contenedor contenido-hogar" >
-    <h2>Encuentra El Insecticida Apropiado Para Tu Hogar</h2>
-    <P>Llena el formulario y un asesor se comunicara con usted a la brevedad</P>
-    <a href="contacto.html" class="boton boton-naranja">Contactenos</a>
-  </div>  
-  </section>
 
- <div class="seccion-inferior contenedor">
-  <section  class="blog">
-        <h3 class="centrar-texto fw-300" >Nuestro Blog</h3>
-          <article class="entrada-blog">
-                <div class="imagen">
-                <img src="icon/BlancoContacto.jpeg" alt="Producto Nosotros" width="260px" height="260">
-                </div>
-        <div class="texto-entrada" >
-          <a href="entrada-blog.html">
-          <h4>Los Mejores Insecticidas y de Mejor Calidad Para tu Hogar</h4>
-          </a>
-        <p>Escrito el: <em class="span">23/04/2020 </em>por: <em class="span">Admin</em></p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.cusotationem 
-          qui inventore tenetur deserunt esse quasi odit voluptates iste similique minima?</p>
-        </div>
-        </article>  
-      <article class="entrada-blog">
-       <div class="imagen">
-        <img src="icon/AzulContacto.jpeg" alt="Producto Nosotros" width="260px" height="260">
-       </div>
-      <div class="texto-entrada">
-        <a href="entrada-blog2.html">
-          <h4>Conozca Como se Desarrollan los Productos de Exterminio </h4>
-        </a> 
-          <P>Escrito el: <em class="span">23/04/2020</em> por: <em class="span">Admin</em></P>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.cusotationem 
-            qui inventore tenetur deserunt esse quasi odit voluptates iste similique minima?</p>          
-      </div> 
-        </article>
+    <section class="contenedor seccion">
+      <h2 class="fw-300 centar texto">Le Ofrecemos</h2>
+        <div class="iconos-nosotros">
+            <div class="icono">
+              <img src="images/imgEficiencia.jpg"/>
+              <h3 class="mayuscula">EFICIENCIA</h3>
+              <p>Contamos con productos de calidad que le garantizan una completa erradicación de las 
+                distintas plagas que puedan aparecer en su domicilio, si lo desea puede preguntar 
+                por el servicio de fumigación.</p>
+            </div>
+            <div class="icono">
+              <img src="images/imgEconomia.jpg"/>
+              <h3 class="mayuscula">ECONOMIA</h3>
+              <p>Nuestros productos están fabricados con los químicos más económicos y de calidad, 
+                permitiéndonos ofrecerlos a un precio económico y asequible para cualquier 
+                persona que busque acabar con las molestas plagas.</p>
+            </div>
+            <div class="icono">
+              <img src="images/imgSeguridad.jpg"/>
+              <h3 class="mayuscula">SEGURIDAD</h3>
+              <p>Le garantizamos una completa erradicación de las plagas, utilizando cualquiera 
+                de nuestros productos en sus diferentes presentaciones, si realiza su compra por 
+                internet nos comprometemos a enviarle su producto a su dirección de residencia. </p>
+            </div>
+      </div>
     </section>
-    <section class="comentarios">
-     <h3 class="centrar-texto fw-300">Comentario</h3>
-     <div class="comentario">
-    <blockquote>
-      Una buena experiencia a la hora de comprar los insecticidas satisfacen
-       mi necesidad de eliminar todo tipo de insectos
-    </blockquote>
-    <p>- Bryan Urueña</p>
-  </div>
-  </section>
-</div> 
-   <footer class="site-footer">
-     <div class="contenedor contenedor-footer">
-       <nav class="navegacion"">
-         <a href="nosotros.html">Nosotros</a>
-         <a href="anuncios.html">Anuncios</a>
-         <a href="blog.html">Blog</a>
-         <a href="contacto.html">Contacto</a>
-       </nav>  
-        
+
+    <main class="seccion contenedor">
+      <header>
+        <h2 class="fw-300 centrar-texto">Insecticidas en Venta</h2>
+      </header>
+      <div class="contenedor-anuncio">
+          <div class="anuncio">
+              <img src="images/Blanco con Válvula 500 ml.jpg" alt="Imagen Exterminio Lider">
+              <div class="contenido-anuncio">
+                  <h3>Exterminio Lider</h3>
+                  <p>
+                    Con este insecticida podras combatir plagas como cucarahcas,
+                    pulgas, hormigas, comejen entre otros. 
+                  </p>
+                  <center><p class="precio">$ 11.000 COP</p></center>
+                  <ul class="iconos-exterminios">
+                      <li><img src="images/icongalon.png" alt=""></li>
+                      <li><img src="images/iconsinvalvula.png" alt=""></li>
+                      <li><img src="images/iconspray.png" alt=""></li>
+                  </ul>
+                  <ul class="iconos-exterminios">
+                    <li>Galon</li>
+                    <li>2lt</li>
+                    <li>Spray</li>
+                  </ul>
+                  <center><a href="#" class="boton boton-verde">Ver Insecticida</a></center>
+              </div>
+          </div>
+          <div class="anuncio">
+              <img src="images/Azul Con Válvula 500 ml.jpg" alt="Imagen Exterminnio De Zancudos">
+              <div class="contenido-anuncio">
+                  <h3>Exterminio Zancudos</h3>
+                  <p>Con este insecticida podras combatir directamente esos molestos zancudos.</p><br>
+                  <center><p class="precio">$ 12.000 COP</p></center>
+                  <ul class="iconos-exterminios">
+                    <li><img src="images/icongalon.png" alt=""></li>
+                    <li><img src="images/iconsinvalvula.png" alt=""></li>
+                    <li><img src="images/iconspray.png" alt=""></li>
+                   </ul>
+                   <ul class="iconos-exterminios">
+                    <li>Galon</li>
+                    <li>2lt</li>
+                    <li>Spray</li>
+                  </ul>
+                  <center><a href="#" class="boton boton-verde">Ver Insecticida</a></center>     
+              </div>
+          </div>
+          <div class="anuncio">
+              <img src="images/Amarillo Con Válvula 500 ml.jpg" alt="Imagen Exterminio De Moscas">
+              <div class="contenido-anuncio">
+                  <h3>Exterminio Moscos</h3>
+                  <p>Con este insecticida podras combatir todos aquellos mosquitos  
+                    que rodean tu casa.</p>
+                  <center><p class="precio">$ 12.000 COP</p></center>
+                  <ul class="iconos-exterminios">
+                    <li><img src="images/icongalon.png" alt=""></li>
+                    <li><img src="images/iconsinvalvula.png" alt=""></li>
+                    <li><img src="images/iconspray.png" alt=""></li>
+                  </ul>
+                  <ul class="iconos-exterminios">
+                    <li>Galon</li>
+                    <li>2lt</li>
+                    <li>Spray</li>
+                  </ul>
+                  <center><a href="" class="boton boton-verde">Ver Insecticida</a></center>
+              </div>
+          </div>
+      </div>
+      <br>
+      <Footer>
+          <div class="ver-catalogo">
+              <a href="" class="boton boton-rojo">Ver Catalogo</a>
+          </div>
+      </Footer>
+    </main>
+
+    <section class="imagen-contacto">
+      <div class="contenedor contenido-contacto">
+        <h2>Encuentra el Insecticida que Buscas Aquí</h2>
+        <P>Llena el formulario y un asesor te contactara a la brevedad</P>
+        <a href="#" class="boton boton-verde">Contactenos</a>
+      </div>
+    </section>
+
+    <div class="seccion-inferior contenedor">
+      <section class="blog">
+        <h3>Nuestro BLog</h3>
+        <article class="entrada-blog">
+              <div class="imagen">
+                <img src="images/blogim1.jpg">
+              </div>
+              <div class="texto-entrada">
+                <a href="#">
+                  <h4>Los Mejores Insecticidas y de Mejor Calidad Para tu Hogar</h4>
+                </a>
+                <p>Escrito el: <em class="span">23/04/2020 </em>por: <em class="span">Admin</em></p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.cusotationem 
+                  qui inventore tenetur deserunt esse quasi odit voluptates iste similique minima?</p>
+              </div>
+        </article>
+        <article class="entrada-blog">
+              <div class="imagen">
+                <img src="images/Blog2.jpg" alt="">
+              </div>
+              <div class="texto-entrada">
+                <a href="#">
+                  <h4>Conozca Como se Desarrollan los Productos de Exterminio </h4>
+                </a>
+                <P>Escrito el: <em class="span">23/04/2020</em> por: <em class="span">Admin</em></P>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.cusotationem 
+                  qui inventore tenetur deserunt esse quasi odit voluptates iste similique minima?</p>
+              </div>
+        </article>
+      </section>
+      <section class="comentarios">
+        <h3 class="centrar-texto fw-300">Comentario</h3>
+        <div class="comentario">
+          <blockquote>
+            "Una buena experiencia a la hora de comprar, los insecticidas satisfacen
+            mi necesidad de eliminar todo tipo de insectos."
+          </blockquote>
+          <p>- Bryan Urueña</p>
+        </div>
+      </section>
+    </div>
+
+    <footer class="site-footer">
+      <div class="contenedor contenedor-footer barra">
+        <nav class="navegacion">
+          <a href="nosotro.html">Nosotros</a>
+          <a href="anuncio.html">Anuncio</a>
+          <a href="blog.html">Blog</a>
+          <a href="contacto.html">Contacto</a>
+          
+        </nav>
         <p class="copyright">Todos los Derechos de Reservados &copy;</p>
-      </div>  
+      </div>
     </footer>
-  
-    </body> 
-  </html>
+
+  </body> 
+</html>
