--- a/anuncio2.html
+++ b/anuncio2.html
@@ -1,72 +1,82 @@
 <!DOCTYPE html>
 <html lang="es"> 
+
     <head>
-      <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EXTERMINIO EL ORGINAL</title>
-    <link rel="icon" type="icon"  href="icon/logo.jpeg.png">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style.css">
-      </head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <title>Exterminio El Original</title>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="icon" type="icon" href="icon/IconNoplagas.png">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+
+    </head>
 
     <body>
-     <header class="site-header">
-     <div class="contenedor contenido-header">
-       <div class="barra">
-         <a href="/index.html">
-          <img src="icon/IconExterminios.png" alt="Logo Exterminio" width="140" height="110">
-         </a>
-      <nav class="navegacion">
-        <a href="nosotros.html">Nosotros</a>
-        <a href="anuncios.html">Anuncios</a>
-        <a href="blog.html">Blog</a>
-        <a href="contacto.html">Contacto</a>
-      </nav>
-     </div>
- </div>
-     </header>
-     <h3 class="fw-300 centrar-texto">Exterminio De Zancudo</h3>
-     <div class="imagen-producto contenedor"> 
-        <img src="images/Azul Con Válvula 500 ml.jpg" alt="Imagen Exterminnio De Zancudos" > 
-     </div>
-     <main class="contenedor seccion contenido-centrado">
-         <div class="resumen-producto"> </div>
-         <p class="precio">$ 12.000 COP</p>
-              <ul class="icono-exterminio">
-                <li> <img src="icon/Galon.jpeg" alt=""></li>
-                <li><img src="icon/Litro.jpeg" alt=""></li>
-                <li><img src="icon/Spray.jpeg" alt=""></li>
-             </ul>
-             <ul class="icono-exterminio">
-               <li>Galon</li>
-               <li>2lt</li>
-               <li>Spray</li>
-             </ul>
-             <div>
-               <p>
-                  Deleniti magni tempore amet delectus saepeLorem ipsum dolor sit amet consectetur,
-                  adipisicing elit. Saepe labore sequi aliquid vel. Cum, dicta aperiam
-                  quis iure cupiditate itaque sint nam corrupti dignissimos.
-                  Deleniti magni tempore amet delectus saepe.Lorem ipsum dolor sit amet consectetur,
-                  adipisicing elit. Saepe labore sequi aliquid vel. Cum,
-                  dicta aperiam quis iure cupiditate itaque sint nam corrupti dignissimos. 
-                  Deleniti magni tempore amet delectus saepeLorem ipsum dolor sit amet consectetur, 
-                  adipisicing elit. Saepe labore sequi aliquid vel. </p>
-             </div>
-     </main>
-  
-   <footer class="site-footer">
-     <div class="contenedor contenedor-footer">
-       <nav class="navegacion"">
-         <a href="nosotros.html">Nosotros</a>
-         <a href="anuncios.html">Anuncios</a>
-         <a href="blog.html">Blog</a>
-         <a href="contacto.html">Contacto</a>
-       </nav>  
-        
-        <p class="copyright">Todos los Derechos de Reservados &copy;</p>
-      </div>  
-    </footer>
-  
-    </body> 
-  </html>
+        <header >
+            <div class="site-header">
+              <div class="contenedor contenido-header">
+                <div class="barra">  
+                    <a href="index.html">
+                        <img src="icon/IconExterminios.png" alt="Logo Exterminio" class="logo">
+                    </a>
+                    <nav class="navegacion">
+                        <a href="nosotros.html">Nosotros</a>
+                        <a href="anuncio.html">Anuncio</a>
+                        <a href="blog.html">Blog</a>
+                        <a href="contacto.html">Contacto</a>
+                    </nav>
+                </div>
+              </div>
+            </div>
+            </header>
+
+        <h3 class="fw-300 centrar-texto">Exterminio Zancudos</h3>
+        <div class="imagen-producto contenedor"> 
+           <img src="images/Azul Con Válvula 500 ml.jpg" alt="Imagen Exterminio Lider" > 
+        </div>
+        <main class="contenedor seccion contenido-centrado">
+            <div class="resumen-producto"> </div>
+            <p class="precio">$ 12.000 COP</p>
+                 <ul class="icono-exterminio">
+                   <li> <img src="images/icongalon.png" alt=""></li>
+                   <li><img src="images/iconsinvalvula.png" alt=""></li>
+                   <li><img src="images/iconspray.png" alt=""></li>
+                </ul>
+                <ul class="icono-exterminio">
+                  <li>Galon</li>
+                  <li>2lt</li>
+                  <li>Spray</li>
+                </ul>
+                <div>
+                  <p>Lorem ipsum dolor sit amet consectetur,
+                     adipisicing elit. Saepe labore sequi aliquid vel. Cum,
+                     dicta aperiam quis iure cupiditate itaque sint nam corrupti dignissimos.
+                     Deleniti magni tempore amet delectus saepeLorem ipsum dolor sit amet consectetur,
+                     adipisicing elit. Saepe labore sequi aliquid vel. Cum, dicta aperiam
+                     quis iure cupiditate itaque sint nam corrupti dignissimos.
+                     Deleniti magni tempore amet delectus saepe.Lorem ipsum dolor sit amet consectetur,
+                     adipisicing elit. Saepe labore sequi aliquid vel. Cum,
+                     dicta aperiam quis iure cupiditate itaque sint nam corrupti dignissimos. 
+                     Deleniti magni tempore amet delectus saepeLorem ipsum dolor sit amet consectetur, 
+                     adipisicing elit. Saepe labore sequi aliquid vel. Cum, dicta aperiam quis iure cupiditate 
+                     itaque sint nam corrupti dignissimos. Deleniti magni tempore amet delectus saepe.</p>
+                </div>
+        </main>
+
+        <footer class="site-footer">
+            <div class="contenedor contenedor-footer barra">
+                <nav class="navegacion">
+                    <a href="nosotro.html">Nosotros</a>
+                    <a href="anuncio.html">Anuncio</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contacto.html">Contacto</a>
+
+                </nav>
+                <p class="copyright">Todos los Derechos de Reservados &copy;</p>
+            </div>
+        </footer>
+    </body>
+</html>
